// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropMenuButton default 1`] = `
<div
  className="sc-iAyFgw dFRdIO sc-jKJlTe eSamUg sc-dxgOiQ gFOVWI"
  disabled={false}
  type="customs"
>
  <span
    className="sc-gPEVay hhFKBz"
    disabled={false}
    type="customs"
  />
  <div
    className="sc-hSdWYo jeXqGb sc-ckVGcZ kOTlsU"
  >
    <span
      checked={false}
      className="sc-eHgmQL flDMUr sc-kkGfuU bzYImA"
      disabled={false}
      type="customs"
    >
      <input
        className="sc-kpOJdX gbMDBd"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        type="button"
      />
    </span>
    <span
      checked={false}
      className="sc-jDwBTQ hCtvjM"
      disabled={false}
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      type="customs"
    >
      <input
        className="sc-kpOJdX gbMDBd"
        disabled={false}
        onBlur={[Function]}
        type="button"
      />
      <i
        className="lugia-icon-direction_down  sc-gZMcBi gDITef"
      />
    </span>
  </div>
</div>
`;

exports[`DropMenuButton divided={false} 1`] = `
<div
  checked={false}
  className="sc-eNQAEJ cKPCre sc-jKJlTe eSamUg sc-dxgOiQ gFOVWI"
  disabled={false}
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  type="customs"
>
  <input
    className="sc-kpOJdX gbMDBd"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    type="button"
  />
  <div
    className="sc-hMqMXs WSdtl sc-ckVGcZ kOTlsU"
  >
    <span
      className="sc-kkGfuU bzYImA"
    />
    <span
      className="sc-kEYyzF eaPwTX"
    >
      <i
        className="lugia-icon-direction_down  sc-gZMcBi gDITef"
      />
    </span>
  </div>
</div>
`;

exports[`DropMenuButton type=basic 1`] = `
<div
  className="sc-cvbbAY gezRHR sc-dxgOiQ gFOVWI"
>
  <div
    checked={false}
    className="sc-jWBwVP jozmnI sc-ckVGcZ kOTlsU"
    disabled={false}
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <input
      className="sc-kpOJdX gbMDBd"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      type="button"
    />
    <span
      checked={false}
      className="sc-brqgnP gQlgjS"
      disabled={false}
    >
      <span
        className="sc-cMljjf dxahCF"
      />
      <span
        className="sc-jAaTju chlGhk sc-kEYyzF eaPwTX"
      >
        <i
          className="lugia-icon-direction_down  sc-gZMcBi gDITef"
        />
      </span>
    </span>
  </div>
</div>
`;

exports[`DropMenuButton type=primary,divided={true} 1`] = `
<div
  className="sc-iAyFgw dFRdIO sc-jKJlTe gGpppI sc-dxgOiQ gFOVWI"
  disabled={false}
  type="primary"
>
  <span
    className="sc-gPEVay gCMcaP"
    disabled={false}
    type="primary"
  />
  <div
    className="sc-hSdWYo jeXqGb sc-ckVGcZ kOTlsU"
  >
    <span
      checked={false}
      className="sc-eHgmQL exFXaE sc-kkGfuU bzYImA"
      disabled={false}
      type="primary"
    >
      <input
        className="sc-kpOJdX gbMDBd"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        type="button"
      />
    </span>
    <span
      checked={false}
      className="sc-jDwBTQ dqRgQE"
      disabled={false}
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      type="primary"
    >
      <input
        className="sc-kpOJdX gbMDBd"
        disabled={false}
        onBlur={[Function]}
        type="button"
      />
      <i
        className="lugia-icon-direction_down  sc-gZMcBi gDITef"
      />
    </span>
  </div>
</div>
`;
